--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "license": "MIT",
     "node-remote": "http://localhost",
     "scripts": {
+        "postinstall": "bower install",
+        "prestart": "npm install",
         "start": "nw"
     },
     "dependencies": {
