Antes de borrar ficheros antiguos del modulo media-record

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ node_modules/
 app/public/libs/
 app/records/audio/
 app/records/video/
+app/public/records/screenshot/
 app/public/records/audio/
 app/public/records/video/
