--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-    "name": "demo-otis-v2",
-    "version": "0.0.1",
-    "main": "./app/index.html",
-    "description": "Aplicación que muestra todos los progresos que tengo realizados.",
-    "repository": "No repository yet",
-    "license": "MIT",
-    "node-remote": "http://localhost",
-    "scripts": {
-        "postinstall": "bower install",
-        "prestart": "npm install",
-        "start": "nw"
-    },
-    "dependencies": {
-        "nw": "^0.12.3",
-        "express": "^4.13.3",
-        "ejs": "^2.3.4",
-        "body-parser": "^1.14.0",
-        "cookie-parser": "~1.0.1"
-    },
-    "devDependencies": {
-        "grunt": "^0.4.5",
-        "grunt-nw-builder": "^2.0.0",
-        "grunt-shell": "^1.1.2"
-    },
-    "window": {
-        "id": "vMain",
-        "title": "Otis Demo v2",
-        "icon": "app-icon.ico",
-        "toolbar":true,
-        "frame":false,
-        "width": 1200,
-        "height": 650,
-        "min_width": 1024,
-        "min_height": 650,
-        "position": "center"
-    }
+  "name": "demo-otis-v2",
+  "version": "0.0.1",
+  "main": "./app/index.html",
+  "description": "Aplicación que muestra todos los progresos que tengo realizados.",
+  "repository": "No repository yet",
+  "license": "MIT",
+  "node-remote": "http://localhost",
+  "scripts": {
+    "postinstall": "bower install",
+    "prestart": "npm install",
+    "start": "nw"
+  },
+  "dependencies": {
+    "body-parser": "^1.14.0",
+    "cookie-parser": "~1.0.1",
+    "ejs": "^2.3.4",
+    "express": "^4.13.3",
+    "fluent-ffmpeg": "^2.1.0",
+    "nw": "^0.12.3"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-nw-builder": "^2.0.0",
+    "grunt-shell": "^1.1.2"
+  },
+  "window": {
+    "id": "vMain",
+    "title": "Otis Demo v2",
+    "icon": "app-icon.ico",
+    "toolbar": true,
+    "frame": false,
+    "width": 1200,
+    "height": 650,
+    "min_width": 1024,
+    "min_height": 650,
+    "position": "center"
+  }
 }
